ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  ingressClassName: alb
  rules:
  - host: knote.johnyfoster.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: knote
            port:
              number: 80
  - host: www.knote.johnyfoster.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: knote
            port:
              number: 80
